--- a/deploy/complete-k8s.yaml
+++ b/deploy/complete-k8s.yaml
@@ -251,7 +251,7 @@ spec:
     spec:
       containers:
       - name: socks-front-end
-        image: weaveworksdemos/front-end:0.3.12
+        image: gnado/sock-front-end:v0.1.0
         resources:
           limits:
             cpu: 200m
